<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SendToSFTP</string>
    <string name="title_activity_main">SendToSFTP</string>
    <string name="title_activity_add_server">Add/Edit Server</string>
    <string name="servername">Servername</string>
    <string name="keyfile">Key File</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hostname">Hostname</string>
    <string name="serverlist">Serverlist</string>
    <string name="connection">Connection</string>
    <string name="defaultserver">Default Server</string>
    <string name="defaultserver_description">If this is active, this will be the server when you use the \"share\" function</string>
    <string name="filename">Filename</string>
    <string name="imagepreview">Previewimage</string>
</resources>
