<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.evilbrain.sendtosftp.Main"><![CDATA[

    TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />







    ]]>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/servername"
        android:id="@+id/serverNameText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:layout_alignBottom="@+id/serverName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/serverName"
        android:layout_toEndOf="@+id/serverNameText"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/serverNameText"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hostname"
        android:id="@+id/serverHostText"
        android:layout_below="@+id/serverName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/serverHost"
        android:layout_alignTop="@+id/serverHostText"
        android:layout_alignLeft="@+id/serverName"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/userNameText"
        android:layout_gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/serverHost" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_alignTop="@+id/userNameText"
        android:layout_alignLeft="@+id/serverName"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/userPasswordText"
        android:layout_below="@+id/userName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/userPassword"
        android:layout_toEndOf="@+id/serverNameText"
        android:layout_alignLeft="@+id/serverName"
        android:layout_alignTop="@+id/userPasswordText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyfile"
        android:id="@+id/keyFileText"
        android:layout_below="@+id/userPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/serverNameText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/keyFile"
        android:layout_alignStart="@+id/serverName"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/keyFileText"
        android:layout_alignLeft="@+id/serverName"
        android:inputType="textUri" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaultserver"
        android:id="@+id/defaultServer"
        android:layout_below="@+id/keyFile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultserver_description"
        android:id="@+id/defaultServerDescription"
        android:layout_below="@+id/defaultServer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/defaultServerDescription">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonOK"
            android:text="@string/ok" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/buttonCancel" />
    </LinearLayout>

</RelativeLayout>
